<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="email_text">Please enter your email</string>
    <string name="password_text">Please enter your password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="lets_start">Let\'s start!</string>
    <string name="welcome_title">Welcome to our Shoe Store!</string>
    <string name="welcome_text">Thank you for choosing us!\n\We are so excited to have you on board. So let\'s not waste any more time and start adding shoes!</string>
    <string name="instruction_title">Instruction</string>
    <string name="instruction_text">Our inventory is made to simply record and add a list of all your shoes!\n\ Simply <b>SCROLL</b> through the inventory list or <b>TAP</b> on the plus button to add a new shoe. It\'s as easy as that!</string>
    <string name="instruction_button_text">Got it!</string>
    <string name="title_instruction">Instruction</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title_header">Welcome</string>
    <string name="logout">Logout</string>
    <string name="new_shoe_label">Add new shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="shoe_list_label">Shoe List</string>
    <string name="add_shoe_label">Add Shoe</string>
</resources>
