<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.navigation.ShoeListViewModel" />
    </data>

    <!--Here I am using ConstraintLayout to remove the need of adding a second Linear layout inside for the 2 buttons and the screen is a bit more complex-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        tools:context=".navigation.ShoeDetailFragment">

        <TextView
            android:id="@+id/shoe_label"
            style="@style/TextHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:text="@string/new_shoe_label"
            app:layout_constraintBottom_toTopOf="@+id/shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_mid"
            android:layout_marginBottom="@dimen/margin_small"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/shoe_name"
            android:inputType="textPersonName"
            android:text="@={shoeViewModel.name}"
            app:layout_constraintBottom_toTopOf="@+id/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_label" />

        <EditText
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/shoe_company"
            android:inputType="textPersonName"
            android:text="@={shoeViewModel.company}"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name" />

        <EditText
            android:id="@+id/shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/shoe_size"
            android:inputType="numberDecimal"
            android:text="@={shoeViewModel.size}"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company" />

        <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/description"
            android:inputType="textLongMessage"
            android:text="@={shoeViewModel.description}"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>